[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Signposts.png" type="Texture" id=1]
[ext_resource path="res://WIP/Signpost.gd" type="Script" id=2]
[ext_resource path="res://WIP/ArrowKey.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tutorials/tuto1-1w.png" type="Texture" id=4]
[ext_resource path="res://Tutorials/marco-tutos.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 8 )

[node name="Signpost" type="Area2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Tutorial" type="Sprite" parent="."]
visible = false
position = Vector2( -0.594555, -0.891897 )
scale = Vector2( 2, 2 )
z_index = 10
texture = ExtResource( 4 )

[node name="Marco" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
z_index = 9
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = -3
texture = ExtResource( 1 )
hframes = 4
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="ArrowKey" parent="Position2D" instance=ExtResource( 3 )]
visible = false

[connection signal="body_entered" from="." to="." method="_on_Signpost_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Signpost_body_exited"]
